service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: property
  namespace: default

spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /accounts
            pathType: Prefix
            backend:
              service:
                name: account-service
                port:
                  number: 80

          - path: /api/reservations
            pathType: Prefix
            backend:
              service:
                name: reservation-service
                port:
                  number: 80

          - path: /properties
            pathType: Prefix
            backend:
              service:
                name: property-service
                port:
                  number: 80

          - path: /uaa
            pathType: Prefix
            backend:
              service:
                name: authentication-service
                port:
                  number: 80
